--- a/pages/chat.html
+++ b/pages/chat.html
@@ -3,9 +3,9 @@ layout: mypost
 title: 留言板
 ---
 
-<p>留言功能已迁移到"吐个槽"，跳转中...</p>
+<p>请发送至邮箱...</p>
 
-<p><a href="{{ site.tucaoUrl }}">如未跳转请手动点击这里</a></p>
+<p>></p>
 
 <script language="javascript" type="text/javascript">
   window.location.href = '{{site.tucaoUrl}}'
