--- a/i/index.html
+++ b/i/index.html
@@ -7,7 +7,7 @@
     <title>从零开始，由心而发！</title>
     <meta name="description" content="这里是无空的个人主页，正在学习中...">
     <meta name="keywords" content="wuko,无空,个人主页">
-    <link rel="icon" type="image/ico" href="//sdn.geekzu.org/avatar/4cc893d113dd74ceca73f9863f2c5446/">
+    <link rel="icon" type="image/ico" href="https://sm.ms/image/1BxvYJXuLICwq9t">
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.12.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -24,16 +24,16 @@
                 <p>很荣幸您能访问我的网站！
                 </p>
                 <p>
-                    我很喜欢的一句话：<br>If the moon smiled, she would resemble you.<br> 如果月亮会笑，那么她一定像你一样美！
+                    希望能与君共勉，<br>共同进步！<br> 祝你有一天能和你重要的人重逢！---可塑性记忆
 
                 </p>
 
                 <p>Catch me:</p>
                 <div class="row">
                     <button id="kaygb-blog" class="btn btn-primary col-lg-4">BLOG</button>
-                    <a href="//eas1.cn" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">BLOG</a>
-                    <a href="https://github.com/kaygb/kaygb/tree/master/v3" target="_blank" class="btn btn-secondary col-lg-4">GitHub</a>
-                    <a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=i@eas1.cn" target="_blank" id="kaygb-mail-a" class="btn btn-success col-lg-4">Send a Mail</a>
+                    <a href="//wuko.top" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">BLOG</a>
+                    <a href="github.com/wuko233" target="_blank" class="btn btn-secondary col-lg-4">GitHub</a>
+                    <a href="email:admin@wuko.top" target="_blank" id="kaygb-mail-a" class="btn btn-success col-lg-4">Send a Mail</a>
                     <button id="kaygb-mail" class="btn btn-success col-lg-4">Send a Mail</button>
                 </div>
 
@@ -41,16 +41,15 @@
                 <h4 class="mt-4">or, keep your eyes on</h4>
                 <ul class="social mt-1">
                     <li><a href="https://weibo.com/u/5223004318"><i class="fab fa-weibo " aria-hidden="true"></i></a></li>
-                    <li><a href="https://github.com/kaygb"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/wuko233"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-zhihu" aria-hidden="true"></i></a></li>
                 </ul>
                 <footer>
-                    <p>Copyright 2018 - Now <a href="https://www.vwmwv.cn/" target="_blank">冰微未来</a> <a href="http://beian.miit.gov.cn/" target="_blank">豫ICP备00000000号-1</a>
+                    <p>Copyright 2020 - Now <a href="https://wuko.top" target="_blank">wuko blog</a>
                         <br>Mod by
-                        <a href="https://github.com/kaygb" target="_blank" rel="">kaygb</a>
-                        <a href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank" rel="nofollow"><img src="https://i.loli.net/2020/09/14/YbXKvLAJhlWN1Ox.png" style="width:50px;"></a>
+                        <a href="https://github.com/kaygb/kaygb/tree/master/v3" target="_blank">主页源码来源</a>
 
                     </p>
                     </p>
